--- a/recipe/templates/recipe/index.html
+++ b/recipe/templates/recipe/index.html
@@ -19,9 +19,9 @@
     </section>
 </div>
 
-<div class="container">
+<div class="upload-container">
     <div class="card-title-container">
-        <h3 class="main-title text-center">Latest Food Recipes</h3>
+        <h3>Latest Food Recipes</h3>
         <section class="cards">
             {% for recipe in recipes %}
             {% if recipe.category == 'food' %}
@@ -54,14 +54,9 @@
     </div>
 </div>
 
-<div class="container">
-    <div class="mt-3 mb-5">
-    </div>
-</div>
-
-<div class="container">
+<div class="upload-container">
     <div class="card-title-container">
-        <h3 class="main-title text-center">Latest Drink Recipes</h3>
+        <h3>Latest Drink Recipes</h3>
         <section class="cards">
             {% for recipe in recipes %}
             {% if recipe.category == 'drink' %}
@@ -91,11 +86,6 @@
             {% endif %}
             {% endfor %}
         </section>
-    </div>
-</div>
-
-<div class="container">
-    <div class="mt-3 mb-5">
     </div>
 </div>
 
