--- a/recipe/templates/recipe/recipe_edit.html
+++ b/recipe/templates/recipe/recipe_edit.html
@@ -3,15 +3,61 @@
 {% block title %}Edit Recipe{% endblock %} 
 
 {% block content %}
-<div class="container">
-    <form method="POST" enctype="multipart/form-data" class="p-2 form">
-        <h1 class="text-center">Edit recipe</h1>
-        {% csrf_token %}
-        {{ form.media }} 
-        {{ form|crispy }}
-        <div class="text-center">
-            <button type="submit" class="btn btn-primary mt-2">Edit!</button>
-        </div>
-    </form>
-</div>
+<section class="create-recipe-section">
+    <div class="container">
+        <form method="POST" enctype="multipart/form-data" class="p-4 form">
+            <h1 class="text-center">Create new recipe</h1>
+            {% csrf_token %}
+            {{ form.media }}
+
+            <!-- Field: Title -->
+            <div class="form-group">
+                {{ form.title|as_crispy_field }}
+            </div>
+
+            <!-- Field: Description -->
+            <div class="form-group">
+                {{ form.description|as_crispy_field }}
+            </div>
+
+            <!-- Field: Ingredients -->
+            <div class="form-group">
+                {{ form.ingredients|as_crispy_field }}
+            </div>
+
+            <!-- Field: Instructions -->
+            <div class="form-group">
+                {{ form.instructions|as_crispy_field }}
+            </div>
+
+            <!-- Field: Image -->
+            <div class="form-group">
+                {{ form.image|as_crispy_field }}
+            </div>
+            <hr>
+
+            <!-- Field: Category -->
+            <div class="form-group">
+                {{ form.category|as_crispy_field }}
+            </div>
+            <hr>
+
+            <!-- Field: Vegan -->
+            <div class="form-group">
+                {{ form.vegan|as_crispy_field }}
+            </div>
+            <hr>
+
+            <!-- Field: Publicity -->
+            <div class="form-group">
+                {{ form.publicity|as_crispy_field }}
+            </div>
+            <hr>
+
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary mt-2">Create!</button>
+            </div>
+        </form>
+    </div>
+</section>
 {% endblock %}
